add course website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Jewel-Personal Page</title>
 </head>
 <body>
-
+    <a href="ssd/index.html">SSD Course Website</a>
     <h1>Profile</h1>
     <table>
         <tr>
